--- a/package.json
+++ b/package.json
@@ -11,12 +11,7 @@
   "dependencies": {
     "next": "^16.0.10",
     "react": "19.2.0",
-    "react-dom": "19.2.0",
-    "mongodb": "^6.3.0",
-    "mongoose": "^8.0.3",
-    "googleapis": "^131.0.0",
-    "multer": "^1.4.5-lts.1",
-    "formidable": "^3.5.1"
+    "react-dom": "19.2.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
